<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="-183dp"
        tools:layout_editor_absoluteY="-81dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/d0"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/cupcakes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/d1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:text="@string/cc"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d0"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/d2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:src="@drawable/baseline_bookmark_24"
                app:layout_constraintBottom_toBottomOf="@+id/d1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/d1"

                />

            <ImageView
                android:id="@+id/d3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:src="@drawable/baseline_heart_broken_24"
                app:layout_constraintBottom_toBottomOf="@+id/d2"
                app:layout_constraintStart_toEndOf="@+id/d2"
                app:layout_constraintTop_toTopOf="@+id/d2" />

            <View
                android:id="@+id/d5"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="#000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d6" />

            <TextView
                android:id="@+id/d6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="مخبوزات"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d1" />

            <TextView
                android:id="@+id/d7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="الوقت 14 دقيقة"
                android:textSize="20sp"

                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/d6"
                app:layout_constraintEnd_toStartOf="@id/d6"
                app:layout_constraintTop_toTopOf="@id/d6" />


            <TextView
                android:id="@+id/d8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:text="الوصف"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/d5"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/d9"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:text="@string/vv"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/d8"
                tools:ignore="MissingConstraints" />

            <View
                android:id="@+id/d10"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="#000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d9" />


            <TextView
                android:id="@+id/d11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:text="المكونات"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/d10"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/d12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/check"
                android:text="@string/ll"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/d11"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/d13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/check"
                android:text="@string/l"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/d12"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/d14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/check"
                android:text="@string/m1"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/d13"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/d15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/check"
                android:text="@string/m2"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/d14"
                tools:ignore="MissingConstraints" />

            <View
                android:id="@+id/d16"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="#000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d15" />

            <TextView
                android:id="@+id/d17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:text="@string/m3"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/d16" />

            <TextView
                android:id="@+id/d18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/m4"
                android:textColor="#000"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/d17" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>